--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Jeff Kanel",
   "license": "MIT",
   "dependencies": {
+    "adm-zip": "^0.5.9",
     "csv-write-stream": "^2.0.0",
     "ejs": "^3.1.6",
     "json-beautify": "^1.1.1",
