--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "csv-write-stream": "^2.0.0",
     "ejs": "^3.1.6",
     "js-string-escape": "^1.0.1",
+    "jsesc": "^3.0.2",
     "json-beautify": "^1.1.1",
     "jsonpath-plus": "^6.0.1",
     "prettier": "^2.5.1"
